[tool.poetry]
name = "cs150241project-powerchell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cs150241project-networking = {git = "https://github.com/UPD-CS150-241/cs150241project_networking"}
pytest = "^8.3.4"
ruff = "^0.8.4"
pygame-ce = "^2.5.2"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
